# b2b-SaaS-application

./: docker-compose.yaml  docker-compose.yml
backend/rust-backend/order-service/: .env
backend/rust-backend/order-service/src/: db.rs
deploy/: nginx.conf
rust-backend/: .gitignore
rust-backend/analytics/: Cargo.toml  Dockerfile  README.md  dbstructure.md  docker-compose.yml  models.rs
rust-backend/analytics/migrations/: 20231037_create_analytics_and_events.sql  20231038_create_aggregiate_tables.sql  20231039_create_materilised_view.sql
rust-backend/analytics/src/: events.rs  handler.rs  main.rs  models.rs  publisher.rs
rust-backend/analytics/src/tests/: test.rs
rust-backend/analytics/src/worker/: consumer.rs
rust-backend/inventory-management/: .env  .gitignore  Cargo.toml  Dockerfile  readme.md
rust-backend/inventory-management/migrations/: 20231031_create_inventory.sql
rust-backend/inventory-management/src/: db.rs  events.rs  handlers.rs  main.rs  models.rs  redis_pub.rs  redis_sub.rs
rust-backend/inventory-management/src/redis_sub/: events.rs
rust-backend/inventory-management/src/worker/: mod.rs  reservation_worker.rs
rust-backend/logistics/: Cargo.toml  Dockerfile
rust-backend/logistics/migrations/: 20231101_create_shipments.sql
rust-backend/logistics/src/: db.rs  handlers.rs  main.rs  models.rs  publisher.rs  rabbit_pub.rs  redis_sub.rs
rust-backend/notifications/: readme.md
rust-backend/order-service/: Cargo.toml  Dockerfile  readme.md
rust-backend/order-service/migrations/: 20231034_order_service.sql
rust-backend/order-service/src/: db.rs  main.rs  models.rs  redis_pub.rs  redis_sub.rs  routes.rs
rust-backend/order-service/src/redis_sub/: events.rs
rust-backend/order-service/src/worker/: mod.rs  order_expiration_worker.rs
rust-backend/product-catalog/: Cargo.toml  Dockerfile  exampleproduct.md  readme.md
rust-backend/product-catalog/migrations/: 20231032__create_products_table.sql  20231102_create_product_assets_table.sql  V1__create_products_table.sql
rust-backend/product-catalog/src/: db.rs  handlers.rs  main.rs  models.rs  rabbit_pub.rs  redis_pub.rs
rust-backend/user-management/: Cargo.toml  Dockerfile
rust-backend/user-management/migrations/: 20231033_create_user.sql
rust-backend/user-management/src/: auth.rs  db.rs  main.rs  models.rs
rust-backend/user-management/src/middleware/: authmiddleware.rs
rust-backend/user-management/src/protected/: handlers.rs
rust-backend/user-management/src/unprotected/: handlers.rs
scripts/: simulate_cross_service_flow.sh
