[package]
name = "analytics"
version = "0.1.0"
edition = "2024"


[dependencies]
redis = { version = "0.25", features = ["tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dotenv = "0.15"
chrono = "0.4"

