[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
lapin = { version = "2.6", features = ["full"] }        # RabbitMQ client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] } # async redis
tracing = "0.1"
dotenv = "0.15"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
warp = "0.3" # small webserver for websocket dashboard
dotenvy = "0.15"
