[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
lapin = "3.7.1"        # RabbitMQ client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] } # async redis
tracing = "0.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
cmake = "0.1.54"
aws-lc-sys = "=0.34.0"
thiserror = "2.0.17"
futures-util = "0.3.31"
