[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde", "clock" ] }  # For timestamps
