[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3.31"
