[package]
name = "user-management"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
argon2 = "0.5.3"